# Online_Account_Opening

./: Dockerfile  docker-compose.yml  pyproject.toml
src/online_account_opening/: main.py
src/online_account_opening/api/: routes.py
src/online_account_opening/core/: __init__.py  database_config.py  database_connection.py  logger_module.py
src/online_account_opening/frontend/: frontend_routes.py  index.html  maintenance_page.html
src/online_account_opening/frontend/static/: script.js  style.css
